Bug 567831 fennec appears to have an infinite throbber, loads page but doesn't fire onload. r=jduell Same bug as Bug 566388  - [e10s] Not all nsIWebProgress events are being delivered within the content process